--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
       <div id="container-efa186d0dc7575a8f0e319dcffebcfc4"></div>
     </div>
 
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '12bb67d075c3fc49bb50ec9aa63842e6',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/12bb67d075c3fc49bb50ec9aa63842e6/invoke.js"></script>
+
     <div id="countdown"></div>
     <div id="message"></div>
     <button id="continueBtn">👉 Continue</button>
