--- a/index.html
+++ b/index.html
@@ -1,47 +1,136 @@
-<script>
-  const adBox = document.getElementById('adBox');
-  const overlay = document.getElementById('overlay');
-  const continueBtn = document.getElementById('continueBtn');
-  const countdown = document.getElementById('countdown');
-  let adClicked = false;
-
-  function detectAdIframeLoaded() {
-    const container = document.getElementById('container-efa186d0dc7575a8f0e319dcffebcfc4');
-    const iframes = container.getElementsByTagName('iframe');
-    
-    if (iframes.length > 0) {
-      overlay.style.display = 'none'; // Hide loading screen
-      adBox.style.backgroundColor = 'transparent';
-
-      // Start click protection
-      adBox.addEventListener('click', () => {
-        if (adClicked) return;
-        adClicked = true;
-
-        let timeLeft = 20;
-        countdown.textContent = `⏱ Wait ${timeLeft}s...`;
-
-        const timer = setInterval(() => {
-          timeLeft--;
-          countdown.textContent = `⏱ Wait ${timeLeft}s...`;
-          if (timeLeft <= 0) {
-            clearInterval(timer);
-            countdown.textContent = "✅ You can continue now!";
-            continueBtn.style.display = 'inline-block';
-          }
-        }, 1000);
-      });
-    } else {
-      // Try again in 500ms if iframe isn't present yet
-      setTimeout(detectAdIframeLoaded, 500);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ad Protected Continue Page</title>
+  <style>
+    body {
+      background: #0d1117;
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+      padding: 40px;
     }
-  }
 
-  // Start checking for ad iframe
-  detectAdIframeLoaded();
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: #161b22;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
+    }
 
-  // Continue button action
-  continueBtn.addEventListener('click', () => {
-    window.location.href = "https://www.webintoapp.com/app-maker";
-  });
-</script>
+    .ad-box {
+      margin: 25px 0;
+      padding: 20px;
+      border-radius: 12px;
+      border: 3px dashed #ffaa00;
+      background-color: rgba(255, 255, 0, 0.1);
+      position: relative;
+      opacity: 0.5;
+      pointer-events: none;
+      transition: all 0.5s ease;
+    }
+
+    .ad-box.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .ad-loading-overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      border-radius: 10px;
+      z-index: 2;
+    }
+
+    #countdown {
+      font-size: 22px;
+      color: #00ffff;
+      margin-top: 20px;
+    }
+
+    #continueBtn {
+      display: none;
+      margin-top: 25px;
+      padding: 12px 25px;
+      background: limegreen;
+      color: black;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>🟡 Click the ad below and wait 20 seconds</h2>
+    
+    <div class="ad-box" id="adBox">
+      <div class="ad-loading-overlay" id="overlay">🔄 Ad is loading, please wait...</div>
+
+      <!-- Your ad script -->
+      <script async="async" data-cfasync="false" src="//pl26722894.profitableratecpm.com/efa186d0dc7575a8f0e319dcffebcfc4/invoke.js"></script>
+      <div id="container-efa186d0dc7575a8f0e319dcffebcfc4"></div>
+    </div>
+
+    <div id="countdown"></div>
+    <button id="continueBtn">✅ Continue</button>
+  </div>
+
+  <script>
+    const adBox = document.getElementById('adBox');
+    const overlay = document.getElementById('overlay');
+    const continueBtn = document.getElementById('continueBtn');
+    const countdown = document.getElementById('countdown');
+    const container = document.getElementById('container-efa186d0dc7575a8f0e319dcffebcfc4');
+
+    let adClicked = false;
+
+    // Monitor ad container for iframe
+    const observer = new MutationObserver(() => {
+      const iframe = container.querySelector('iframe');
+      if (iframe) {
+        overlay.style.display = 'none';
+        adBox.classList.add('active');
+        observer.disconnect(); // Stop observing
+
+        // Click protection
+        adBox.addEventListener('click', () => {
+          if (adClicked) return;
+          adClicked = true;
+
+          let timeLeft = 20;
+          countdown.textContent = `⏱ Wait ${timeLeft}s...`;
+
+          const timer = setInterval(() => {
+            timeLeft--;
+            countdown.textContent = `⏱ Wait ${timeLeft}s...`;
+            if (timeLeft <= 0) {
+              clearInterval(timer);
+              countdown.textContent = "✅ You can continue now!";
+              continueBtn.style.display = 'inline-block';
+            }
+          }, 1000);
+        });
+      }
+    });
+
+    observer.observe(container, { childList: true, subtree: true });
+
+    continueBtn.addEventListener('click', () => {
+      window.location.href = "https://www.webintoapp.com/app-maker";
+    });
+  </script>
+</body>
+</html>
