--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <h5>⚠️click on a ad and wait then come to this website for get link of the webintoapp⚠️</h5>
 
     <div class="ad-wrapper">
-      <script type='text/javascript' src='//pl26775072.profitableratecpm.com/01/75/d4/0175d49ff3320fced4cda0f8a7e9f355.js'></script>
+      <script async="async" data-cfasync="false" src="//pl26722894.profitableratecpm.com/efa186d0dc7575a8f0e319dcffebcfc4/invoke.js"></script>
+<div id="container-efa186d0dc7575a8f0e319dcffebcfc4"></div>
     </div>
 
     <div id="countdown"></div>
