--- a/index.html
+++ b/index.html
@@ -1,79 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ad Protected Page</title>
-
-<script src="https://fpyf8.com/88/tag.min.js" data-zone="150002" async data-cfasync="false"></script>
-  
-  <style>
-    body {
-      background: #0d1117;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 40px;
-    }
-
-    .container {
-      max-width: 700px;
-      margin: auto;
-      background: #161b22;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
-    }
-
-    #countdown {
-      font-size: 22px;
-      color: #00ffff;
-      margin-top: 20px;
-    }
-
-    #continueBtn {
-      display: none;
-      margin-top: 25px;
-      padding: 12px 25px;
-      background: limegreen;
-      color: black;
-      border: none;
-      border-radius: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>🔒 Protected Link</h1>
-    <p>Please wait 20 seconds to continue...</p>
-
-    <div id="countdown">⏱ Wait 20s...</div>
-    <button id="continueBtn">✅ Continue</button>
-  </div>
-
-  <script>
-    const countdown = document.getElementById('countdown');
-    const continueBtn = document.getElementById('continueBtn');
-
-    let timeLeft = 20;
-    countdown.textContent = `⏱ Wait ${timeLeft}s...`;
-
-    const timer = setInterval(() => {
-      timeLeft--;
-      countdown.textContent = `⏱ Wait ${timeLeft}s...`;
-      if (timeLeft <= 0) {
-        clearInterval(timer);
-        countdown.textContent = "✅ You can continue now!";
-        continueBtn.style.display = 'inline-block';
-      }
-    }, 1000);
-
-    continueBtn.addEventListener('click', () => {
-      window.location.href = "https://www.webintoapp.com/app-maker";
-    });
-  </script>
-</body>
-</html>
+<script>
+<!-- code by https://www.html-code-generator.com -->
+document.write(unescape('%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%20%20%3Cmeta%20charset%3D%22UTF-8%22%20/%3E%0A%20%20%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22/%3E%0A%20%20%3Ctitle%3EAd%20Protected%20Page%3C/title%3E%0A%0A%3Cscript%20src%3D%22https%3A//fpyf8.com/88/tag.min.js%22%20data-zone%3D%22150002%22%20async%20data-cfasync%3D%22false%22%3E%3C/script%3E%0A%20%20%0A%20%20%3Cstyle%3E%0A%20%20%20%20body%20%7B%0A%20%20%20%20%20%20background%3A%20%230d1117%3B%0A%20%20%20%20%20%20color%3A%20white%3B%0A%20%20%20%20%20%20font-family%3A%20%27Segoe%20UI%27%2C%20sans-serif%3B%0A%20%20%20%20%20%20text-align%3A%20center%3B%0A%20%20%20%20%20%20padding%3A%2040px%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20.container%20%7B%0A%20%20%20%20%20%20max-width%3A%20700px%3B%0A%20%20%20%20%20%20margin%3A%20auto%3B%0A%20%20%20%20%20%20background%3A%20%23161b22%3B%0A%20%20%20%20%20%20padding%3A%2030px%3B%0A%20%20%20%20%20%20border-radius%3A%2015px%3B%0A%20%20%20%20%20%20box-shadow%3A%200%200%2015px%20rgba%280%2C%20255%2C%20255%2C%200.3%29%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%23countdown%20%7B%0A%20%20%20%20%20%20font-size%3A%2022px%3B%0A%20%20%20%20%20%20color%3A%20%2300ffff%3B%0A%20%20%20%20%20%20margin-top%3A%2020px%3B%0A%20%20%20%20%7D%0A%0A%20%20%20%20%23continueBtn%20%7B%0A%20%20%20%20%20%20display%3A%20none%3B%0A%20%20%20%20%20%20margin-top%3A%2025px%3B%0A%20%20%20%20%20%20padding%3A%2012px%2025px%3B%0A%20%20%20%20%20%20background%3A%20limegreen%3B%0A%20%20%20%20%20%20color%3A%20black%3B%0A%20%20%20%20%20%20border%3A%20none%3B%0A%20%20%20%20%20%20border-radius%3A%2010px%3B%0A%20%20%20%20%20%20font-size%3A%2018px%3B%0A%20%20%20%20%20%20cursor%3A%20pointer%3B%0A%20%20%20%20%20%20font-weight%3A%20bold%3B%0A%20%20%20%20%7D%0A%20%20%3C/style%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%20%20%3Cdiv%20class%3D%22container%22%3E%0A%20%20%20%20%3Ch1%3E%uD83D%uDD12%20Protected%20Link%3C/h1%3E%0A%20%20%20%20%3Cp%3EPlease%20wait%2020%20seconds%20to%20continue...%3C/p%3E%0A%0A%20%20%20%20%3Cdiv%20id%3D%22countdown%22%3E%u23F1%20Wait%2020s...%3C/div%3E%0A%20%20%20%20%3Cbutton%20id%3D%22continueBtn%22%3E%u2705%20Continue%3C/button%3E%0A%20%20%3C/div%3E%0A%0A%20%20%3Cscript%3E%0A%20%20%20%20const%20countdown%20%3D%20document.getElementById%28%27countdown%27%29%3B%0A%20%20%20%20const%20continueBtn%20%3D%20document.getElementById%28%27continueBtn%27%29%3B%0A%0A%20%20%20%20let%20timeLeft%20%3D%2020%3B%0A%20%20%20%20countdown.textContent%20%3D%20%60%u23F1%20Wait%20%24%7BtimeLeft%7Ds...%60%3B%0A%0A%20%20%20%20const%20timer%20%3D%20setInterval%28%28%29%20%3D%3E%20%7B%0A%20%20%20%20%20%20timeLeft--%3B%0A%20%20%20%20%20%20countdown.textContent%20%3D%20%60%u23F1%20Wait%20%24%7BtimeLeft%7Ds...%60%3B%0A%20%20%20%20%20%20if%20%28timeLeft%20%3C%3D%200%29%20%7B%0A%20%20%20%20%20%20%20%20clearInterval%28timer%29%3B%0A%20%20%20%20%20%20%20%20countdown.textContent%20%3D%20%22%u2705%20You%20can%20continue%20now%21%22%3B%0A%20%20%20%20%20%20%20%20continueBtn.style.display%20%3D%20%27inline-block%27%3B%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%2C%201000%29%3B%0A%0A%20%20%20%20continueBtn.addEventListener%28%27click%27%2C%20%28%29%20%3D%3E%20%7B%0A%20%20%20%20%20%20window.location.href%20%3D%20%22https%3A//www.webintoapp.com/app-maker%22%3B%0A%20%20%20%20%7D%29%3B%0A%20%20%3C/script%3E%0A%3C/body%3E%0A%3C/html%3E'));
+</script>
